음성 인식 기능 수정